--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
